src/test/ui/object-lifetime/object-lifetime-default-dyn-binding-nonstatic3.stderr
error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-dyn-binding-nonstatic3.rs:16:36
   |
LL | fn bar(x: &str) -> &dyn Foo<Item = dyn Bar> { &() }
   |                                    ^^^^^^^

error: aborting due to previous error

